cmake_minimum_required(VERSION 3.17.5)
project(Dude)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dude
        main.cpp
        ArraySequence.h
        Dynamic_array.h
        linkseq.h
        link_list.h
        Sorter.h
        sequence.h
        interfaceBoth.h
        interfaceForArray.h
        interfaceForLink.h
        timer.h
        )